--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<%= link_to 'show', '/products/show'%>
-<%= link_to 'add', '/products/add'%> 
+<%= link_to 'SHOW', '/products/show'%>
+<%= link_to 'CREATE PRODUCTS', '/products/add'%> 
+<%= link_to 'SHOW ORDERS', '/products/show_orders'%>
  
